--- a/rtf_theme/templates/home.html
+++ b/rtf_theme/templates/home.html
@@ -32,7 +32,7 @@
   <div class="container">
     <div class="row">
       <div class="span4 featured" id="home-logo">
-        <img class="logo" src="{{STATIC_URL}}img/large_logo.png" alt="restore the
+        <img class="logo" src="{{STATIC_URL}}img/rtf_logo.png" alt="restore the
             fourth logo">
         <p>Help spread the word:</p>
         <a class="social" href="mailto:?subject=The U.S. government is spying on you. Let's do something about it.&amp;body=Nationwide Protests to Restore the Fourth%0A%0AOn June 6th, The Guardian and The Washington Post published NSA-contractor Edward Snowden's leaks revealing the existence of PRISM, a clandestine electronic surveillance program that allows the NSA to directly access e-mail, web searches, and other Internet traffic. This program is in blatant violation of the Fourth Amendment of the U.S. Constitution, protecting us against 'unreasonable searches and seizures' and those without a warrant or probable cause.%0A%0AConcerned? You can do something. In July, thousands of people in over 50 cities across the United States will protest the unconstitutional surveillance methods employed by the U.S. government, educating other citizens on the issue and preparing an apparatus for further action.%0A%0AYou can learn more and find and sign up for your local protest at http://www.restorethefourth.net." target="_blank"><img src="{{STATIC_URL}}img/social/email.png" /></a>
@@ -72,7 +72,7 @@
       </div>
 
     </div>
-      
+
   </div>
 
 </div>
