--- a/rtf_theme/templates/home.html
+++ b/rtf_theme/templates/home.html
@@ -28,12 +28,14 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> <!-- /fourth-quote -->
+
   <div class="container">
+
     <div class="row">
+
       <div class="span4 featured" id="home-logo">
-        <img class="logo" src="{{STATIC_URL}}img/rtf_logo.png" alt="restore the
-            fourth logo">
+        <img class="logo" src="{{STATIC_URL}}img/rtf_logo.png" alt="restore the fourth logo">
         <p>Help spread the word:</p>
         <a class="social" href="mailto:?subject=The U.S. government is spying on you. Let's do something about it.&amp;body=Nationwide Protests to Restore the Fourth%0A%0AOn June 6th, The Guardian and The Washington Post published NSA-contractor Edward Snowden's leaks revealing the existence of PRISM, a clandestine electronic surveillance program that allows the NSA to directly access e-mail, web searches, and other Internet traffic. This program is in blatant violation of the Fourth Amendment of the U.S. Constitution, protecting us against 'unreasonable searches and seizures' and those without a warrant or probable cause.%0A%0AConcerned? You can do something. In July, thousands of people in over 50 cities across the United States will protest the unconstitutional surveillance methods employed by the U.S. government, educating other citizens on the issue and preparing an apparatus for further action.%0A%0AYou can learn more and find and sign up for your local protest at http://www.restorethefourth.net." target="_blank"><img src="{{STATIC_URL}}img/social/email.png" /></a>
         <a class="social" id="tweet-box" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Frestorethefourth.net&text=This%20July%204th%20protests%20are%20planned%20across%20the%20country%20against%20surveillance%20%26%20to%20%40restorethefourth.%20Will%20you%20be%20there%3F&related=Restore_the4th%2Csinak" target="_blank"><img src="{{STATIC_URL}}img/social/twitter.png"/></a>
@@ -42,217 +44,28 @@
         <script type="text/javascript">
             function openFacebook(){var e="https://www.facebook.com/sharer/sharer.php?u=hhttp%3A%2F%2Frestorethefourth.net";window.open(e,"Share on Facebook","width=626,height=436");return false}function openTwitter(){var e="https://twitter.com/intent/tweet?url=http%3A%2F%2Frestorethefourth.net&text=This%20July%204th%20protests%20are%20planned%20across%20the%20country%20against%20surveillance%20%26%20to%20%40restorethefourth.%20Will%20you%20be%20there%3F&related=Restore_the4th%2Csinak";window.open(e,"Twitter","width=550,height=420");return false}$(document).ready(function(){$("#facebook").attr("onclick","openFacebook(); return false;");$("#tweet-box").attr("onclick","openTwitter(); return false;")})
         </script>
-    <div id="mc_embed_signup">
-    <p>Sign up for our newsletter</p>
-    <form action="http://restorethefourth.us7.list-manage2.com/subscribe/post?u=78ef7834b585d79e03ecda09a&amp;id=4ecea1236d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
-            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
-    </form>
-    </div>
-      </div>
+        <div id="mc_embed_signup">
+            <p>Sign up for our newsletter</p>
+            <form action="http://restorethefourth.us7.list-manage2.com/subscribe/post?u=78ef7834b585d79e03ecda09a&amp;id=4ecea1236d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
+            </form>
+        </div>
+      </div> <!-- /home-logo (used for logo+social+signup links on left) -->
+
       <div class="span7 offset1" id="home-right">
-      {% blog_recent_posts 1 as recent_posts %}
-      {% for blog_post in recent_posts %}
-      </h3><i>{{blog_post.publish_date}}</i></h3>
-      <h2>{{blog_post.title}}</h2>
-      {{blog_post.description|safe}}
-      <a href="{{ blog_post.get_absolute_url }}">Read more</a>
-      {% endfor %}
-      </div>
-	<div id="infoWindowTemplate">
-	  <div class="infoWindow">
-	    <div style="float: left;">
-	      <img class="logo" src="{{STATIC_URL}}img/small_logo.png" alt="Restore the Fourth">
-	    </div>
-	    <div style="float: left; max-width: 200px;">
-	      <strong>{location}</strong><br><br>
-	      <a href="{info}">More Info</a>
-	    </div>
-	  </div>
-	</div>
-      </div>
+          {% blog_recent_posts 1 as recent_posts %}
+          {% for blog_post in recent_posts %}
+              </h3><i>{{blog_post.publish_date}}</i></h3>
+              <h2>{{blog_post.title}}</h2>
+              {{blog_post.description|safe}}
+              <a href="{{ blog_post.get_absolute_url }}">Read more</a>
+          {% endfor %}
+      </div> <!-- /home-right (used for featured homepage content on right) -->
 
-    </div>
+    </div> <!-- /row -->
+  </div> <!-- /container -->
+</div> <!-- /masthead -->
 
-  </div>
-
-</div>
-<div class="container">
-  <div class="row">
-    <div class="span12">
-    </div>
-  </div>
-</div>
-<script src="//maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true&amp;libraries=places"></script>
-<script type="text/javascript">
-// hardcoded list of locations
-    var locations =
-    	[
-    ];
-
-    // map class
-    function EventsMap () {
-        var instance = this;
-        var $mapElem = $('#map');
-        var $search  = $('#search input[type="text"]');
-
-        // create map, center it on the US
-        var map = new google.maps.Map($mapElem[0], {
-            zoom:       4,
-            center:     new google.maps.LatLng(37, -98),
-            mapTypeId:  google.maps.MapTypeId.ROADMAP
-        });
-
-        // geocoder for address <=> coords conversions
-        var geocoder = new google.maps.Geocoder();
-
-        // create single info window for marker popups
-        var infoWindow = new google.maps.InfoWindow({
-            content: ''
-        });
-
-        // info window template
-        var infoWindowTemplate = $('#infoWindowTemplate').html();
-
-        // search input autocomplete
-        var searchAutocomplete = new google.maps.places.Autocomplete($search[0]);
-        searchAutocomplete.bindTo('bounds', map);
-
-        // user has triggered new map search
-        google.maps.event.addListener(searchAutocomplete, 'place_changed', function () {
-            var place = searchAutocomplete.getPlace();
-
-            // match chosen from autocomplete list
-            if (place.geometry) {
-                map.panTo(place.geometry.location);
-                map.setZoom(9);
-            }
-
-            // manual text submission - fuzzy search
-            else {
-                // get lat/long of the address
-                geocoder.geocode({address: $search.val()}, function(results, status) {
-                    if (status == google.maps.GeocoderStatus.OK) {
-                        map.panTo(results[0].geometry.location);
-                        map.setZoom(9);
-
-                        $search.val(results[0].formatted_address);
-                    } else {
-                        instance.displaySearchStatus('<i class="icon-warning-sign"></i> Unable to find a location matching your search.');
-                    }
-                });
-            }
-        });
-
-        // center map on user's current location
-        this.centerOnGeolocation = function () {
-            if (navigator.geolocation) {
-                instance.displaySearchStatus('<i class="icon-spinner icon-spin"></i> Detecting... the browser may ask for your permission.');
-
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    var pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-
-                    map.panTo(pos);
-                    map.setZoom(9);
-
-                    // fill search box with named location
-                    geocoder.geocode({latLng: pos}, function(results, status) {
-                        if (status == google.maps.GeocoderStatus.OK) {
-                            // multiple zoom locations returned, filter out names which are too specific
-                            var goodLocations = $.grep(results, function (result) {
-                                return $.inArray('political', result.types) > -1;
-                            });
-
-                            var address = goodLocations.length > 0 ? goodLocations[0].formatted_address : (
-                                    results.length > 0 ? results[0].formatted_address : ''
-                                    );
-
-                            $search.val(address);
-                        } else {
-                            instance.displaySearchStatus('<i class="icon-warning-sign"></i> Unable to determine current location. Please search or zoom manually.');
-                        }
-                    });
-
-                    instance.displaySearchStatus('');
-                }, function () {
-                    instance.displaySearchStatus('<i class="icon-warning-sign"></i> Unable to determine current location. Please search or zoom manually.');
-                }, {timeout: 5000});
-            } else {
-                instance.displaySearchStatus('<i class="icon-warning-sign"></i> Your browser does not support geolocation. Please search or zoom manually.');
-            }
-        };
-
-        this.displaySearchStatus = function (status) {
-            $status = $search.nextAll('.status').html(status);
-            setTimeout(function () { $status.html(''); }, 5000);
-        };
-
-        // plot new markers on the map, make them interactive
-        this.plotStaticMarkers = function(data){
-        	$.each(data, function (i, location) {
-        		var latlng = new google.maps.LatLng(location.latitude, location.longitude);
-        		var marker = new google.maps.Marker({
-                            map:        map,
-                            position:   latlng,
-                            title:      location.city
-                        });
-
-                        google.maps.event.addListener(marker, 'click', function () {
-                            var content = infoWindowTemplate
-                                    .replace('{location}', location.city)
-                                    .replace('{info}', location.url);
-
-                            infoWindow.setContent(content);
-                            infoWindow.open(map, marker);
-                        });
-        	})
-        }
-        this.plotMarkers = function (locations) {
-            $.each(locations, function (i, location) {
-                // get address coords
-                geocoder.geocode({address: location.address}, function(results, status) {
-                    if (status == google.maps.GeocoderStatus.OK) {
-                        // plot the marker
-                        var marker = new google.maps.Marker({
-                            map:        map,
-                            position:   results[0].geometry.location,
-                            title:      location.address
-                        });
-
-                        // event for opening info window
-                        google.maps.event.addListener(marker, 'click', function () {
-                            var content = infoWindowTemplate
-                                    .replace('{location}', location.address)
-                                    .replace('{info}', location.info);
-
-                            infoWindow.setContent(content);
-                            infoWindow.open(map, marker);
-                        });
-                    } else {
-                    	alert("Geocode was not successful for the following reason: " + status);
-                    }
-                });
-            });
-        }
-    }
-
-    // initialize
-    $(function () {
-    var map = new EventsMap();
-$.getJSON('/protests.json/', function(data){
-map.plotStaticMarkers(data);
-});
-
-
-        $('#search').on('submit', function (e) {
-            e.preventDefault();
-        });
-
-    $('#search a').on('click', function (e) {
-    e.preventDefault();
-    map.centerOnGeolocation();
-    });
-    });
-</script>
 {% endblock %}
 
 {% block footer %}
