--- a/rtf_theme/templates/home.html
+++ b/rtf_theme/templates/home.html
@@ -50,6 +50,9 @@
                     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
             </form>
         </div>
+        <div class="volunteer">
+          <a href="/volunteer" class="btn btn-default">Sign up to volunteer today!</a>
+        </div>
       </div> <!-- /home-logo (used for logo+social+signup links on left) -->
 
       <div class="span7 offset1" id="home-right">
