--- a/rtf_theme/templates/fancy.html
+++ b/rtf_theme/templates/fancy.html
@@ -70,6 +70,9 @@
         </div> <!-- /home-right (featured content on right) -->
         {% endblock %}
       </div> <!-- /row -->
+
+      {% block map %}{% endblock %} <!-- for when we need a map -->
+
     </div> <!-- /container -->
   </div> <!-- /masthead -->
 
