Protests list shows "protests per page"
Just a bit clearer

--- a/rtf_theme/templates/protests/protests.html
+++ b/rtf_theme/templates/protests/protests.html
@@ -29,7 +29,9 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-    $('#protest_table').dataTable();
+    $('#protest_table').dataTable({ "oLanguage": {
+        "sLengthMenu": "_MENU_ protests per page"
+    }});
 });
 </script>
 {% endblock %}
