Only show upcoming protests by default
There's over a hundred protests listed on the live site, and most (if
not all) of them are expired. It would be helpful to only show the
upcoming ones, since the current site sorts by city instead of date by
default.

--- a/rtf_theme/templates/protests/protests.html
+++ b/rtf_theme/templates/protests/protests.html
@@ -34,4 +34,9 @@ $(document).ready(function() {
     }});
 });
 </script>
+{% if showing_all = 'false' %}
+<a href="/protests/?show_all=true">Show All Protests (including expired)</a>
+{% else %}
+<a href="/protests">Show Only Upcoming Protests</a>
+{% endif %}
 {% endblock %}
