update piwik settings per austin

--- a/rtf_theme/templates/base.html
+++ b/rtf_theme/templates/base.html
@@ -54,7 +54,7 @@
         _paq.push(['trackPageView']);
         _paq.push(['enableLinkTracking']);
         (function() {
-          var u="http://toxiccode.com/piwik/";
+          var u="http://piwik.toxiccode.com/";
           _paq.push(['setTrackerUrl', u+'piwik.php']);
           _paq.push(['setSiteId', 1]);
           var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
@@ -62,7 +62,7 @@
         })();
 
       </script>
-      <noscript><p><img src="http://toxiccode.com/piwik/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+      <noscript><p><img src="http://piwik.toxiccode.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
       <!-- End Piwik Code -->
   </head>
   <body>
