update volunteer signup for working groups

--- a/rtf_theme/templates/forms/volunteer.html
+++ b/rtf_theme/templates/forms/volunteer.html
@@ -64,31 +64,31 @@
         </div>
 
       </div>
-      <h4 class="text-center">What volunteer interests do you have?</h4>
+      <h4 class="text-center">What working group(s) are you interested in?</h4>
       <br>
       <div class="row form-panel">
-
-        <div class="control-group">
-          {{ form.events|label_classes:"control-label" }}
-          <div class="controls">
-            {{ form.events }}
-            <span class="help-inline">{{ form.events.help_text }}</span>
-          </div>
-        </div>
-
-        <div class="control-group">
-          {{ form.organizing|label_classes:"control-label" }}
-          <div class="controls">
-            {{ form.organizing }}
-            <span class="help-inline">{{ form.organizing.help_text }}</span>
-          </div>
-        </div>
 
         <div class="control-group">
           {{ form.communications|label_classes:"control-label" }}
           <div class="controls">
             {{ form.communications }}
             <span class="help-inline">{{ form.communications.help_text }}</span>
+          </div>
+        </div>
+
+        <div class="control-group">
+          {{ form.outreach|label_classes:"control-label" }}
+          <div class="controls">
+            {{ form.outreach }}
+            <span class="help-inline">{{ form.outreach.help_text }}</span>
+          </div>
+        </div>
+
+        <div class="control-group">
+          {{ form.operations|label_classes:"control-label" }}
+          <div class="controls">
+            {{ form.operations }}
+            <span class="help-inline">{{ form.operations.help_text }}</span>
           </div>
         </div>
 
@@ -109,10 +109,10 @@
         </div>
 
         <div class="control-group">
-          {{ form.multimedia|label_classes:"control-label" }}
+          {{ form.legislation|label_classes:"control-label" }}
           <div class="controls">
-            {{ form.multimedia }}
-            <span class="help-inline">{{ form.multimedia.help_text }}</span>
+            {{ form.legislation }}
+            <span class="help-inline">{{ form.legislation.help_text }}</span>
           </div>
         </div>
 
